[gd_scene load_steps=15 format=3 uid="uid://bk26cr2nlhsrd"]

[ext_resource type="Script" path="res://scripts/victory_screen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dcsnj8ewf6trt" path="res://assets/sprites/bg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bcrplr63nd5mh" path="res://assets/sprites/table.png" id="3"]
[ext_resource type="Theme" uid="uid://dbxmhut0taak5" path="res://themes/default_text.tres" id="4"]
[ext_resource type="PackedScene" path="res://components/announcer.tscn" id="5"]
[ext_resource type="PackedScene" path="res://components/button.tscn" id="6"]
[ext_resource type="Script" path="res://scripts/utils/audio_manager.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://kek7hehemje0" path="res://assets/sound effects/victory_enter.mp3" id="8"]
[ext_resource type="AudioStream" uid="uid://dbt1ttadsdih" path="res://assets/sound effects/stringer1.mp3" id="9"]
[ext_resource type="AudioStream" uid="uid://c6v6fl5ve2wgk" path="res://assets/sound effects/victory_ambience.mp3" id="10"]
[ext_resource type="PackedScene" path="res://components/fade_transition.tscn" id="11"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="2"]
resource_name = "enter"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0.556863, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="3"]
_data = {
"RESET": SubResource("1"),
"enter": SubResource("2")
}

[node name="VictoryScreen" type="Node2D"]
script = ExtResource("1")
annoucement_timeout = 3000

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(587.5, 315)
scale = Vector2(2.62549, 2.59873)
texture = ExtResource("2")

[node name="Table" type="Sprite2D" parent="."]
position = Vector2(573, 568)
scale = Vector2(3.00819, 3.00819)
texture = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Victory")
libraries = {
"": SubResource("3")
}

[node name="Victory" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 305.0
offset_top = 86.0
offset_right = 857.0
offset_bottom = 270.0
theme = ExtResource("4")
theme_override_font_sizes/font_size = 200
text = "Victory"

[node name="Announcer" parent="." instance=ExtResource("5")]
position = Vector2(573, 515)
hold_timeout = 2000

[node name="Button" parent="." instance=ExtResource("6")]
position = Vector2(573, 604)
scale = Vector2(1.275, 1.275)
text = "To Menu"
color = Color(1, 0.380382, 0.448994, 1)

[node name="AudioManager" type="Node" parent="."]
script = ExtResource("7")
audio_labels = Array[String](["enter", "stringer", "ambience"])
audio_sources = Array[AudioStream]([ExtResource("8"), ExtResource("9"), ExtResource("10")])

[node name="FadeTransition" parent="." instance=ExtResource("11")]
position = Vector2(0, -43)

[connection signal="button_clicked" from="Button" to="." method="_on_button_button_clicked"]
